# autocrap-kanye

./: Makefile.am  README  configure.ac
kanye/: Makefile.am  kanye.c  kanye.h
m4/: .gitignore  kanye.m4
po/: .gitignore  POTFILES.in  ru.po
tests/: Makefile.am  kanye-test.c
